# aula20_bootcamp_python

./: README.md  docker-compose.yml  meubanco.db  pyproject.toml
backend/: crud.py  database.py  main.py  meubanco.db  models.py  requirements.txt  router.py  schema.py  schemas.py
