[project]
name = "aula-20"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas William da Silva Chaves",email = "lucaswilliamsv@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
